--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -28,6 +28,12 @@
   text-align: center;
 }
 
+@media screen and (max-width: 600px) {
+  .headingMd {
+    font-size: 1rem;
+  }
+}
+
 .borderCircle {
   border-radius: 1000px;
 }
