--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -4,6 +4,12 @@
   margin: 3rem auto 6rem;
 }
 
+@media screen and (max-width: 600px) {
+  .container {
+    margin: 2rem auto;
+  }
+}
+
 .header {
   display: flex;
   flex-direction: column;
