--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -15,11 +15,23 @@
   margin: 1rem 0;
 }
 
+@media screen and (max-width: 600px) {
+  .headingXl {
+    font-size: 1.6rem;
+  }
+}
+
 .headingLg {
   font-size: 2rem;
   line-height: 1.4;
   margin-top: 0;
   font-weight: 500;
+}
+
+@media screen and (max-width: 600px) {
+  .headingLg {
+    font-size: 1.2rem;
+  }
 }
 
 .headingMd {
